@@ -19,9 +19,8 @@ package jakarta.faces.component.html;
 
 import static jakarta.faces.component.html.HtmlComponentUtils.handleAttribute;
 
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import jakarta.faces.component.UICommand;
 import jakarta.faces.component.behavior.ClientBehaviorHolder;
@@ -824,8 +823,8 @@ public class HtmlCommandButton extends UICommand implements ClientBehaviorHolder
         getStateHelper().put(PropertyKeys.type, type);
     }
 
-    private static final Collection<String> EVENT_NAMES = Collections.unmodifiableCollection(Arrays.asList("blur", "change", "click", "action", "dblclick",
-            "focus", "keydown", "keypress", "keyup", "mousedown", "mousemove", "mouseout", "mouseover", "mouseup", "select"));
+    private static final Collection<String> EVENT_NAMES = List.of("blur", "change", "click", "action", "dblclick",
+            "focus", "keydown", "keypress", "keyup", "mousedown", "mousemove", "mouseout", "mouseover", "mouseup", "select");
 
     @Override
     public Collection<String> getEventNames() {
