@@ -16,11 +16,11 @@
  * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
  */
 package jakarta.faces.component.html;
+
 import static jakarta.faces.component.html.HtmlComponentUtils.handleAttribute;
 
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import jakarta.faces.component.UIGraphic;
 import jakarta.faces.component.behavior.ClientBehaviorHolder;
@@ -659,8 +659,8 @@ public class HtmlGraphicImage extends UIGraphic implements ClientBehaviorHolder 
         handleAttribute(this, "width", width);
     }
 
-    private static final Collection<String> EVENT_NAMES = Collections.unmodifiableCollection(
-            Arrays.asList("click", "dblclick", "keydown", "keypress", "keyup", "mousedown", "mousemove", "mouseout", "mouseover", "mouseup"));
+    private static final Collection<String> EVENT_NAMES = List.of(
+            "click", "dblclick", "keydown", "keypress", "keyup", "mousedown", "mousemove", "mouseout", "mouseover", "mouseup");
 
     @Override
     public Collection<String> getEventNames() {
